--- a/Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html
+++ b/Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html
@@ -138,27 +138,27 @@ Destapacaños liquido para inodoro - Destapa cloacas caballito
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html">Como destapar cañerias de desague de cocina </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Informacion-sobre-las-estrellas.html">Informacion sobre las estrellas </a> 
-         </li>
-<!--EndPostsList-->
-<!--PostsList-->
-         <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
-         </li>
-<!--EndPostsList-->
-<!--PostsList-->
-         <li  class="list-inline-item">
-       <a href="../Servicios/Destapa-Cañerias-Quilmes-en-Palermo.html">Destapa Cañerias Quilmes en Palermo </a> 
+       <a href="../Servicios/Destapar-Cantilde;eria-Wc.html">Destapar Cañeria Wc </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
        <a href="../Servicios/Que-son-los-mapas-estelares.html">Que son los mapas estelares </a> 
+         </li>
+<!--EndPostsList-->
+<!--PostsList-->
+         <li  class="list-inline-item">
+       <a href="../Servicios/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
+         </li>
+<!--EndPostsList-->
+<!--PostsList-->
+         <li  class="list-inline-item">
+       <a href="../Servicios/Desagotadora-El-Destape.html">Desagotadora El Destape </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,17 +221,47 @@ Destapacaños liquido para inodoro - Destapa cloacas caballito
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
+       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas.html">Destapaciones De Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Desagues-Pluviales-En-Viviendas.html">Desagues Pluviales En Viviendas </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Como-destapar-el-inodoro-tapado-con-papel.html">Como destapar el inodoro tapado con papel </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -241,37 +271,7 @@ Destapacaños liquido para inodoro - Destapa cloacas caballito
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Metodo-casero-para-destapar-cañerias.html">Metodo casero para destapar cañerias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Servicios/Destapar-Cantilde;eria-Wc.html">Destapar Cañeria Wc </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
